--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     padding: 0;
     font-family: 'Lora', serif;
     /* J'ai corrigé ici : .jpg au lieu de .png */
-    background-image: url('images/background.jpg');
+    background-image: url('images/background.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
